[package]
name = "joker_query"
version = "1.0.0"
edition = "2021"
authors = ["danyalmhai@gmail.com"]
readme = "README.md"
description = "The joker_query is most sugared query builder of Rust"
license = "Apache-2.0"
keywords = ["sql", "postgres", "sqlite", "mysql", "query_builder"]
homepage   = "https://github.com/Rustixir/joker_query"
repository = "https://github.com/Rustixir/joker_query"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]